k8s-apps/02-deploy/platform-monitor/grafana-platform-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-platform-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - grafana-platform.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: grafana-platform-cert
  rules:
    - host: grafana-platform.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-platform
                port:
                  number: 80
