k8s-apps/02-deploy/platform-monitor/prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-platform-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - prometheus-platform.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: prometheus-platform-cert
  rules:
    - host: prometheus-platform.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
